--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,24 +13,49 @@ body {
   padding: 1rem;
 }
 form {
-  font-size: 1.8rem;
   display: flex;
   flex-direction: column;
+  font-size: 2rem;
+}
+textarea {
+  width: 100%;
+  height: 12rem;
+  resize: none;
+}
+input[type='text'] {
+  width: 10rem;
+  font-size: 2rem;
+  border: none;
+}
+input[type='radio'] {
+  width: 2rem;
+  height: 2rem;
+}
+.container {
+  max-width: 48rem;
+  width: 100%;
+  margin: auto;
 }
 .title {
-  font-size: 2.4rem;
+  font-size: 3rem;
   text-align: center;
 }
-.w-full {
-  width: 100%;
+.lead {
+  font-size: 2.5rem;
 }
-.b-none {
-  border: none;
+.instructions {
+  font-size: 1.8rem;
+}
+.group {
+  margin-bottom: 1rem;
 }
 .teams {
   font-size: 2rem;
 }
 .btn {
+  max-width: 24rem;
+  width: 100%;
+  margin: 0.5rem auto;
   padding: 1rem 2rem;
   color: #fff;
   border: none;
@@ -41,4 +66,8 @@ form {
 }
 .btn-secondary {
   background-color: #f29559;
+}
+.text-danger {
+  font-weight: 500;
+  color: red;
 }
