--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,44 +10,65 @@ html {
 body {
   height: 100%;
   margin: 0;
-  padding: 1rem;
+  font-family: 'Fragment Mono', monospace;
+  background-color: #FCF6F5FF;
+  color: #424949;
 }
-form {
-  display: flex;
-  flex-direction: column;
-  font-size: 2rem;
-}
-textarea {
-  width: 100%;
-  height: 12rem;
-  resize: none;
-}
-input[type='text'] {
-  width: 10rem;
-  font-size: 2rem;
-  border: none;
-}
-input[type='radio'] {
-  width: 2rem;
-  height: 2rem;
+.v-hidden {
+  visibility: hidden;
 }
 .container {
   max-width: 48rem;
   width: 100%;
-  margin: auto;
+  margin: 0 auto;
+  padding: 0 2rem;
 }
 .title {
-  font-size: 3rem;
+  font-family: 'Faster One', cursive;
+  font-size: 2rem;
   text-align: center;
+  margin: 2rem 0 0;
+  color: #0582ca;
 }
 .lead {
-  font-size: 2.5rem;
-}
-.instructions {
+  margin: 2rem 0 0;
   font-size: 1.8rem;
 }
-.group {
+.instructions {
+  margin: 1rem 0 0;
+  font-size: 1.6rem;
+  font-style: italic;
+}
+.form {
+  margin: 2rem 0 0;
+  display: flex;
+  flex-direction: column;
+}
+.form-group {
   margin-bottom: 1rem;
+}
+.form-group label {
+  font-size: 1.4rem;
+}
+.form-group textarea {
+  width: 100%;
+  min-height: 10rem;
+  resize: none;
+  color: #0582ca;
+}
+.form-group input[type='text'] {
+  background-color: #FCF6F5FF;
+  width: 5rem;
+  font-size: 1.8rem;
+  border: none;
+}
+.form-group input[type='radio'] {
+  width: 2rem;
+  height: 2rem;
+}
+.form-group select {
+  padding: 0.5rem;
+  color: #0582ca;
 }
 .teams {
   font-size: 2rem;
@@ -69,5 +90,8 @@ input[type='radio'] {
 }
 .text-danger {
   font-weight: 500;
-  color: red;
+  color: #f29559;
+}
+.dev {
+text-align: center;
 }
