--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,11 +11,9 @@ body {
   height: 100%;
   margin: 0;
   font-family: 'Fragment Mono', monospace;
-  background-color: #FCF6F5FF;
+  font-size: 1rem;
+  background-color: #fcf6f5ff;
   color: #424949;
-}
-.v-hidden {
-  visibility: hidden;
 }
 .container {
   max-width: 48rem;
@@ -25,22 +23,23 @@ body {
 }
 .title {
   font-family: 'Faster One', cursive;
-  font-size: 2rem;
+  font-size: 2em;
   text-align: center;
-  margin: 2rem 0 0;
+  margin: 2rem 0;
   color: #0582ca;
 }
 .lead {
-  margin: 2rem 0 0;
-  font-size: 1.8rem;
+  font-size: 1.6em;
 }
 .instructions {
-  margin: 1rem 0 0;
-  font-size: 1.6rem;
+  padding-left: 2rem;
+  font-size: 1.4em;
   font-style: italic;
 }
+.line {
+  border: 1px solid #0582ca;
+}
 .form {
-  margin: 2rem 0 0;
   display: flex;
   flex-direction: column;
 }
@@ -48,30 +47,39 @@ body {
   margin-bottom: 1rem;
 }
 .form-group label {
-  font-size: 1.4rem;
+  font-size: 1.4em;
 }
 .form-group textarea {
   width: 100%;
-  min-height: 10rem;
   resize: none;
   color: #0582ca;
 }
 .form-group input[type='text'] {
-  background-color: #FCF6F5FF;
+  background-color: #fcf6f5ff;
   width: 5rem;
-  font-size: 1.8rem;
+  font-size: 2em;
   border: none;
 }
 .form-group input[type='radio'] {
-  width: 2rem;
-  height: 2rem;
+  width: 1.6rem;
+  height: 1.6rem;
 }
 .form-group select {
   padding: 0.5rem;
   color: #0582ca;
 }
+.form-group-variant {
+  display: flex;
+  justify-content: center;
+}
+.text-center {
+  text-align: center;
+}
+.v-hidden {
+  visibility: hidden;
+}
 .teams {
-  font-size: 2rem;
+  font-size: 2em;
 }
 .btn {
   max-width: 24rem;
@@ -93,5 +101,15 @@ body {
   color: #f29559;
 }
 .dev {
-text-align: center;
+  text-align: center;
+}
+@media screen and (min-width: 375px) {
+  body {
+    font-size: 1.2rem;
+  }
+}
+@media screen and (min-width: 414px) {
+  body {
+    font-size: 1.3rem;
+  }
 }
