--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,176 @@
+@import url(./normalize.css);
+@import url('https://fonts.googleapis.com/css2?family=Faster+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+:root {
+  --c-black: #000;
+  --c-white: #fff;
+  --c-dark: #212529;
+  --c-light: #f8f9fa;
+  --c-blue: #0077b6;
+  --c-highlight-blue: rgb(4, 223, 255);
+  --c-primary: #344e41;
+  --c-secondary: #3a5a40;
+  --c-bright: #72ce27;
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+html {
+  height: 100%;
+  font-size: 62.5%;
+}
+body {
+  height: 100%;
+  background-color: var(--c-light);
+  color: var(--c-dark);
+  font-family: 'Manrope', sans-serif;
+  font-optical-sizing: auto;
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 400;
+}
+a {
+  color: var(--c-blue);
+}
+a:hover {
+  color: var(--c-highlight-blue);
+}
+header {
+  text-align: center;
+}
+main {
+  padding: 1rem;
+}
+h1 {
+  color: var(--c-primary);
+  font-family: 'Faster One', system-ui;
+  font-size: 2em;
+  font-style: normal;
+  font-weight: 400;
+}
+h2,
+h3,
+h4 {
+  font-family: 'Fjalla One', sans-serif;
+  font-size: 1.5em;
+  font-style: normal;
+  font-weight: 400;
+}
+h2 {
+  color: var(--c-primary);
+}
+h2 span {
+  color: var(--c-secondary);
+}
+h3,
+h4 {
+  color: var(--c-secondary);
+}
+p {
+  font-size: 1.125em;
+}
+li {
+  margin-bottom: 1rem;
+}
+ul li::marker {
+  content: '🟢  ';
+  font-size: 0.75em;
+}
+fieldset {
+  border: 1px solid var(--c-primary);
+  background-color: var(--c-white);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+fieldset legend {
+  color: var(--c-secondary);
+}
+fieldset button {
+  margin-top: 1rem;
+}
+input {
+  margin-bottom: 1rem;
+  border: none;
+  outline: none;
+}
+input[type='text'] {
+  max-width: 15rem;
+  border-bottom: 1px solid var(--c-secondary);
+}
+input[type='text']:focus {
+  border-bottom: 1px solid var(--c-bright);
+}
+input[type='number'] {
+  max-width: 5rem;
+  border: 1px solid var(--c-secondary);
+  border-radius: 0.5rem;
+}
+input[type='number']:focus {
+  border: 1px solid var(--c-bright);
+}
 .d-none {
   display: none;
+}
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  border: none;
+  padding: 1rem 3rem;
+  border-radius: 0.5rem;
+}
+.btn span {
+  color: var(--c-bright);
+}
+.btn:hover {
+  cursor: pointer;
+}
+.btn-primary {
+  border: 1px solid var(--c-primary);
+  background-color: var(--c-primary);
+  color: var(--c-white);
+}
+.btn-primary:hover {
+  background-color: var(--c-white);
+  color: var(--c-primary);
+}
+.btn-secondary {
+  margin: auto;
+  border: 1px solid var(--c-dark);
+  background-color: var(--c-white);
+  color: var(--c-dark);
+  opacity: 0.75;
+}
+.btn-secondary:hover {
+  background-color: var(--c-black);
+  color: var(--c-white);
+}
+.warning {
+  background-color: yellow;
+  color: black;
+}
+.dev {
+  padding: 1rem;
+}
+.dev p {
+  margin: 0;
+  font-size: 1.3rem;
+  font-weight: 100;
+}
+.dev > p:first-child {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+.dev > p:nth-child(2) {
+  text-align: right;
+}
+.dev img {
+  width: 2.6rem;
+  margin: 0 0.5rem;
 }
