--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,9 @@ header {
   text-align: center;
 }
 main {
+  width: 100%;
+  max-width: 80rem;
+  margin: auto;
   padding: 1rem;
 }
 h1 {
@@ -55,9 +58,12 @@ h2,
 h3,
 h4 {
   font-family: 'Fjalla One', sans-serif;
-  font-size: 1.5em;
   font-style: normal;
   font-weight: 400;
+}
+h2,
+h3 {
+  font-size: 1.5em;
 }
 h2 {
   color: var(--c-primary);
@@ -69,6 +75,9 @@ h3,
 h4 {
   color: var(--c-secondary);
 }
+h4 {
+  font-size: 1.25em;
+}
 p {
   font-size: 1.125em;
 }
@@ -79,8 +88,13 @@ ul li::marker {
   content: '🟢  ';
   font-size: 0.75em;
 }
+form {
+  max-width: 50rem;
+  margin: 1rem auto;
+}
 fieldset {
   border: 1px solid var(--c-primary);
+  border-radius: 1rem;
   background-color: var(--c-white);
   display: flex;
   flex-direction: column;
@@ -96,6 +110,9 @@ input {
   margin-bottom: 1rem;
   border: none;
   outline: none;
+}
+input[type='radio'] {
+  accent-color: var(--c-bright);
 }
 input[type='text'] {
   max-width: 15rem;
@@ -116,6 +133,9 @@ input[type='number']:focus {
   display: none;
 }
 .btn {
+  width: 100%;
+  max-width: 30rem;
+  margin: 2rem auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -140,6 +160,7 @@ input[type='number']:focus {
   color: var(--c-primary);
 }
 .btn-secondary {
+  max-width: 15rem;
   margin: auto;
   border: 1px solid var(--c-dark);
   background-color: var(--c-white);
@@ -151,8 +172,32 @@ input[type='number']:focus {
   color: var(--c-white);
 }
 .warning {
-  background-color: yellow;
-  color: black;
+  background-color: var(--c-bright);
+  color: var(--c-white);
+  border-radius: 0.5rem;
+  max-width: 30rem;
+  margin: 1rem auto;
+  padding: 1rem 0;
+  text-align: center;
+}
+.participants {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.teams {
+  text-align: center;
+}
+.cards {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+.card {
+  box-shadow: 0px 0px 3px 1.5px var(--c-bright);
+  border-radius: 1rem;
+  padding: 0 1rem;
 }
 .dev {
   padding: 1rem;
@@ -174,3 +219,13 @@ input[type='number']:focus {
   width: 2.6rem;
   margin: 0 0.5rem;
 }
+/* @media (width >= 576px) {
+}
+@media (width >= 768px) {
+}
+@media (width >= 992px) {
+}
+@media (width >= 1200px) {
+}
+@media (width >= 1400px) {
+} */
