--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,8 @@ body {
   font-size: 1.6rem;
   font-style: normal;
   font-weight: 400;
+  display: grid;
+  grid-template-rows: auto 1fr 1fr auto;
 }
 a {
   color: var(--c-blue);
@@ -219,13 +221,3 @@ input[type='number']:focus {
   width: 2.6rem;
   margin: 0 0.5rem;
 }
-/* @media (width >= 576px) {
-}
-@media (width >= 768px) {
-}
-@media (width >= 992px) {
-}
-@media (width >= 1200px) {
-}
-@media (width >= 1400px) {
-} */
